Extend window drag handle into background tabs for non-custom frame.

This required:

* Deleting the old pre-custom-titlebar rect intersection code, which bypassed
  the drag extension code.  AFIACT this code had no advantages over the common
  code in BrowserNonClientFrameView.
* Fixing a color computation bug in GetTabBackgroundColor() that I introduced in
  https://chromium-review.googlesource.com/1173715 , where it ignored the
  requested active state of the frame.  This probably had other bad effects too.
* Fixing code in the tab strip that failed to mirror bounds correctly, so this
  would work in RTL.  Again, that probably resulted in other bugs too.

While testing that this worked right with the new tab button, I also fixed (via
simplification) an unrelated issue where the new tab button hit test region in
refresh was a rectangle instead of the correct path.

Bug: 862276
Test: Run chrome on Windows 10 with --disable-features=Windows10CustomTitlebar, then hover the top couple pixels of a background tab in a restored window in the default theme.  The tab should not light up with a hover effect until you get 6 px or so down into the tab.
Change-Id: Iabc80cdde7f67251214c5308687105f13ea22f19
Reviewed-on: https://chromium-review.googlesource.com/1180594
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584447}
Former-commit-id: 0532c4e2931053df5dad2cf2600a09af816854a6